--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     wearApp project(':wear')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-wearable:9.0.0'
     compile project(':common')
 }
+
+apply plugin: 'com.google.gms.google-services'
