--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -23,6 +23,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.support:wearable:1.4.0'
-    compile 'com.google.android.gms:play-services-wearable:8.4.0'
+    compile 'com.google.android.gms:play-services-wearable:9.0.0'
     compile project(':common')
 }
+
+apply plugin: 'com.google.gms.google-services'
